--- a/resume.html
+++ b/resume.html
@@ -47,7 +47,7 @@
     <h4>Chennai, TN</h4>
     <h5>January 2019 - Present</h5>
       <ul>
-        <li>Passionate to learn and build Custom ROMs </li>
+        <li>Passionate to learn about FOSS s/ws </li>
         <li>Tweaking android</li>
       </ul>
   </body>
